fix wrong positioning of button in homework card - set position of .more to absolute - remove unnecessary padding - remove float right - add top and bottom values

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -156,13 +156,13 @@
 	}
 
 	.more {
-		position: relative;
-		float: right;
-		padding: 5px 5px 5px 10px;
+		position: absolute;
 		clear: both;
 		text-align: right;
 		color: $primaryColor;
 		text-decoration: none;
+		right: 1vh;
+		bottom: 0.25vh;
 	}
 	.title {
 		white-space: nowrap;
